# ci-scratch

./: build-on.sh  test.po
gettext/: .version  ChangeLog  Makefile.in  configure
iconv-capabilities/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  test-iconv.c
testdir1/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir10/: Makefile.in  aclocal.m4  configure  configure.ac
testdir10/glm4/: Makefile.am  Makefile.in
testdir11/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir12/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir13/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir14/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir14/glm4/: Makefile.am  Makefile.in  strcasecmp_l.m4  strings_h.m4
testdir15/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir16/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir16/gllib/: Makefile.am  Makefile.in
testdir16/glm4/: Makefile.am  Makefile.in
testdir16/gltests/: Makefile.am  Makefile.in  test-c32isgraph.c  test-c32isprint.c  test-c32ispunct.c
testdir17/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir17/glm4/: Makefile.am  Makefile.in
testdir18/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir19/: Makefile.in  config.h.in  configure
testdir2/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir20/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir21/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir22/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir23/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir24/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir25/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir26/: Makefile.in  aclocal.m4  config.h.in  configure.ac
testdir26/glm4/: Makefile.am  Makefile.in  gnulib-common.m4
testdir27/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir28/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir29/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir3/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir30/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir30/gllib/: Makefile.am  Makefile.in
testdir30/glm4/: Makefile.in
testdir30/gltests/: Makefile.am  Makefile.in
testdir31/: Makefile.in  aclocal.m4  config.h.in  configure.ac
testdir32/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir33/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir34/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir35/: .tarball-version  .version  ChangeLog  Makefile.in  THANKS  THANKS-to-translators  aclocal.m4  configure
testdir36/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir37/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir37/gllib/: Makefile.am  Makefile.in
testdir37/glm4/: Makefile.am  Makefile.in
testdir37/gltests/: Makefile.am  Makefile.in  test-boot-time.c  test-readutmp.c
testdir38/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir38/glm4/: Makefile.am  Makefile.in
testdir39/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir39/glm4/: Makefile.am  Makefile.in
testdir4/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir4/gllib/: Makefile.am  Makefile.in
testdir4/glm4/: Makefile.am  Makefile.in
testdir4/gltests/: Makefile.am  Makefile.in  test-canonicalize.c  test-readlink.h
testdir40/: Makefile.in  aclocal.m4  config.h.in  configure.ac
testdir41/: AUTHORS  DEPENDENCIES  HACKING  INSTALL  JOIN-GNU  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  version.sh
testdir41/gnulib-lib/: Makefile.am  Makefile.in
testdir41/gnulib-m4/: gnulib-cache.m4  gnulib-comp.m4
testdir41/src/: Makefile.am  Makefile.in  git-merge-changelog.c
testdir42/: ChangeLog  DEPENDENCIES
testdir43/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir44/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir45/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir46/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir47/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir48/: .tarball-version  ChangeLog  ChangeLog-2007  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  bits.c  cfg.mk  configure  configure.ac  deflate.c  deflate.h  dfltcc.c  gunzip.in  gzexe.in  gzip.1  gzip.c  gzip.doc  gzip.h  inflate.c  lzw.h  revision.h  tailor.h  trees.c  unlzh.c  unlzw.c  unpack.c  unzip.c  util.c  zcat.in  zcmp.in  zdiff.in  zforce.in  zgrep.in  zip.c  zless.1  (+3 more)
testdir49/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir5/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir50/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir51/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir52/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir53/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir54/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir55/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir56/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir57/: Makefile.in  aclocal.m4  config.h.in  configure  (+1 more)
testdir8/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
testdir8/gllib/: Makefile.am  Makefile.in
testdir8/glm4/: Makefile.am  Makefile.in
testdir8/gltests/: Makefile.am  Makefile.in
testdir9/glm4/: Makefile.am  Makefile.in
(+1238 files in other folders)
